the golden path (#97)
* remove last completion

* Threading work

* Schedule RingIteration execution. Fix last iteration logic.

* make it plain

* better warning logging, moar thread resource nigglets

* trace

* Deterministic all the tests

Fix parent selection in Creator.
Fix timing unit determination in Extender.
Fix recover logic in CHOAM

* Fix nextRound() logic.

Use 2*nProc/3 +1 prefix length, rather than nProc.
Don't require 2/3+1 units on level.
Simplify common random permutation iteration.

* handle unknown correctly via status

correct logging tags

* PrefixLength configurable.

Default to 2/3+1.

Use prefixLength of 4 for sql state lifecycle testing

* fix test

* correct config

don't use prefix length configuration

* squelch logging

* handle empty results

* logging the attrocities

* use info for CHOAM logging by default.

remove trace logging for lifecycle testing

* ensure logging before/after stack traces

* logging for genesis assembly

* Add error warning for invalid parent check for debugging this

Squelch gen assem trace logging

* debug tracing. use default sync cycles.

* Clean up synchronization

Use gossip duration instead of sync duration.

Add members before validations in view assembly - d'oh.

* better logging

* Assert crown height on creation.

Delete some unused cruft

* fix and clean up synchronization logic and cleanup predicates

* Add 1 more thread to local routers

Seems to be the last flapper :: fingers crossed ::

* remove wip