@@ -12,18 +12,16 @@ import static org.mockito.ArgumentMatchers.same;
 import static org.mockito.Mockito.mock;
 import static org.mockito.Mockito.when;
 
+import java.security.SecureRandom;
 import java.time.Duration;
 import java.util.List;
-import java.util.Map;
 import java.util.concurrent.CompletableFuture;
 import java.util.concurrent.Executors;
 import java.util.concurrent.TimeUnit;
-import java.util.stream.Collectors;
 import java.util.stream.IntStream;
 
 import org.h2.mvstore.MVStore;
 import org.joou.ULong;
-import org.junit.jupiter.api.BeforeAll;
 import org.junit.jupiter.api.Test;
 
 import com.google.common.util.concurrent.SettableFuture;
@@ -37,16 +35,15 @@ import com.salesforce.apollo.choam.comm.Concierge;
 import com.salesforce.apollo.choam.comm.Terminal;
 import com.salesforce.apollo.choam.support.Bootstrapper.SynchronizedState;
 import com.salesforce.apollo.comm.Router.CommonCommunications;
-import com.salesforce.apollo.crypto.Digest;
 import com.salesforce.apollo.crypto.DigestAlgorithm;
-import com.salesforce.apollo.crypto.Signer.SignerImpl;
-import com.salesforce.apollo.crypto.cert.CertificateWithPrivateKey;
 import com.salesforce.apollo.membership.Context;
 import com.salesforce.apollo.membership.ContextImpl;
 import com.salesforce.apollo.membership.Member;
 import com.salesforce.apollo.membership.SigningMember;
-import com.salesforce.apollo.membership.impl.SigningMemberImpl;
-import com.salesforce.apollo.utils.Utils;
+import com.salesforce.apollo.membership.stereotomy.ControlledIdentifierMember;
+import com.salesforce.apollo.stereotomy.StereotomyImpl;
+import com.salesforce.apollo.stereotomy.mem.MemKERL;
+import com.salesforce.apollo.stereotomy.mem.MemKeyStore;
 import com.salesforce.apollo.utils.bloomFilters.BloomFilter;
 
 /**
@@ -56,32 +53,21 @@ import com.salesforce.apollo.utils.bloomFilters.BloomFilter;
 public class BootstrapperTest {
     private static final int CARDINALITY = 10;
 
-    private static Map<Digest, CertificateWithPrivateKey> certs;
-
-    @BeforeAll
-    public static void beforeClass() {
-        certs = IntStream.range(0, CARDINALITY)
-                         .parallel()
-                         .mapToObj(i -> Utils.getMember(i))
-                         .collect(Collectors.toMap(cert -> Member.getMemberIdentifier(cert.getX509Certificate()),
-                                                   cert -> cert));
-    }
-
     @Test
     public void smoke() throws Exception {
-        Context<Member> context = new ContextImpl<>(DigestAlgorithm.DEFAULT.getOrigin(), CARDINALITY, 0.2, 3);
+        Context<SigningMember> context = new ContextImpl<>(DigestAlgorithm.DEFAULT.getOrigin(), CARDINALITY, 0.2, 3);
 
         Store bootstrapStore = new Store(DigestAlgorithm.DEFAULT, new MVStore.Builder().open());
+        var entropy = SecureRandom.getInstance("SHA1PRNG");
+        entropy.setSeed(new byte[] { 6, 6, 6 });
+        var stereotomy = new StereotomyImpl(new MemKeyStore(), new MemKERL(DigestAlgorithm.DEFAULT), entropy);
 
-        List<SigningMember> members = certs.values()
-                                           .stream()
-                                           .map(c -> new SigningMemberImpl(Member.getMemberIdentifier(c.getX509Certificate()),
-                                                                           c.getX509Certificate(), c.getPrivateKey(),
-                                                                           new SignerImpl(c.getPrivateKey()),
-                                                                           c.getX509Certificate().getPublicKey()))
-                                           .peek(m -> context.activate(m))
-                                           .collect(Collectors.toList());
-
+        List<SigningMember> members = IntStream.range(0, CARDINALITY)
+                                               .mapToObj(i -> stereotomy.newIdentifier().get())
+                                               .map(cpk -> new ControlledIdentifierMember(cpk))
+                                               .map(e -> (SigningMember) e)
+                                               .toList();
+        context.activate(members);
         TestChain testChain = new TestChain(bootstrapStore);
         testChain.genesis()
                  .userBlocks(10)
@@ -121,7 +107,7 @@ public class BootstrapperTest {
 
         Bootstrapper boot = new Bootstrapper(testChain.getAnchor(),
                                              Parameters.newBuilder()
-                                                       .setSynchronizeDuration(Duration.ofMillis(1000))
+                                                       .setGossipDuration(Duration.ofMillis(10))
                                                        .build(RuntimeParameters.newBuilder()
                                                                                .setContext(context)
                                                                                .setMember(member)
